--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 MetaTrader5==5.0.45
 numpy==1.26.1
-pytest==7.4.2
+pandas==2.1.2
+python-dateutil==2.8.2
+pytz==2023.3.post1
+six==1.16.0
+tzdata==2023.3
