While loop with sleep function (video 13).

--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,6 @@
 {
     "mt5": {
-        "server": "ICMarketsEU-Demo",
-        "terminal_pathway": "C:\\Program Files\\MetaTrader 5\\terminal64.exe",
-        "symbols": ["EURJPY"],
+        "symbols": ["ETHUSD"],
         "timeout": 60000,
         "timeframe": "M1"
     }
