some more bug fixes

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "mt5": {
-        "symbols": ["BCHUSD"],
+        "symbols": ["EURCHF"],
         "timeout": 60000,
         "timeframe": "one_minute"
     }
